# MTensor_v2

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
config/: CompilerFlags.cmake  GoogletestConfig.cmake  OpenMPConfig.cmake  nlohmannJsonConfig.cmake  oneDNNConfig.cmake
include/MTensor/: autograd.hpp  data.hpp  graph.hpp  kernels.hpp  nn.hpp  ops.hpp  tensor.hpp  tensorImpl.hpp
include/MTensor/utils/: braodcast.hpp  general.hpp  print_vector.hpp  tensor_iterator.hpp  tensor_print.hpp
include/config/: kernels_export.hpp  mtensor_export.hpp
src/: CMakeLists.txt
src/autograd/: engine.cpp
src/core/: tensor.cpp  tensorImpl.cpp
src/data/dataset/: dataset.cpp  image_folder.cpp  mnist.cpp
src/data/image/: image.cpp
src/data/loader/: loader.cpp
src/data/mnist/: mnist.cpp
src/graph/: export.cpp  grad_graph.cpp
src/kernels/: fused_adam_avx512.cpp  fused_sgd_avx512.cpp
src/nn/activations/: relu.cpp  sigmoid.cpp  softmax.cpp  tanh.cpp
src/nn/core/: module.cpp  sequential.cpp
src/nn/init/: init.cpp
src/nn/layers/: conv.cpp  dropout.cpp  embedding.cpp  flatten.cpp  linear.cpp  normalization.cpp  pooling.cpp  transpose_conv.cpp  unflatten.cpp
src/nn/losses/: cross_entropy.cpp  cross_entropy_with_logits.cpp  kl_divergence.cpp  l1.cpp  mse.cpp
src/nn/optimizers/: adam.cpp  adamw.cpp  optimizer.cpp  sgd.cpp
src/nn/train/: export_import.cpp  trainer.cpp
src/ops/: ops.cpp
src/ops/cpu/binary/: add.cpp  div.cpp  eq.cpp  ge.cpp  gt.cpp  le.cpp  lt.cpp  max.cpp  min.cpp  mul.cpp  ne.cpp  sub.cpp
src/ops/cpu/convolution/: conv_1d.cpp  conv_2d.cpp  conv_3d.cpp  deconv_1d.cpp  deconv_2d.cpp  deconv_3d.cpp
src/ops/cpu/eltwise/: abs.cpp  clip.cpp  exp.cpp  linear.cpp  log.cpp  pow.cpp  relu.cpp  sigmoid.cpp  sqrt.cpp  tanh.cpp
src/ops/cpu/joining/: cat.cpp  embedding.cpp  stack.cpp
src/ops/cpu/linear/: matmul.cpp
src/ops/cpu/memory/: clone.cpp  contiguous.cpp
src/ops/cpu/normalization/: batch_normalization.cpp  group_normalization.cpp  layer_normalization.cpp  rms_normalization.cpp
src/ops/cpu/pooling/: pooling_avg_1d.cpp  pooling_avg_2d.cpp  pooling_avg_3d.cpp  pooling_max_1d.cpp  pooling_max_2d.cpp  pooling_max_3d.cpp
src/ops/cpu/reduction/: max_reduction.cpp  mean.cpp  min_reduction.cpp  mul_reduction.cpp  norm_lp_power_p_sum.cpp  norm_lp_sum.cpp  sum.cpp
src/ops/cpu/softmax/: log_softmax.cpp  softmax.cpp
src/ops/cpu/view/: expand.cpp  narrow.cpp  permute.cpp  slice.cpp  squeeze.cpp  transpose.cpp  unsqueeze.cpp  view.cpp
src/ops/utils/: broadcast.cpp  tensor_iterator.cpp  tensor_print.cpp
src/utils/: general.cpp
tests/: CMakeLists.txt  binary_grad.cpp  binary_ops.cpp  broadcast_test.cpp  conv_tests.cpp  deconv_tests.cpp  dnnl_tests.cpp  eltwise_grad.cpp  eltwise_ops.cpp  graph.html  graph_tests.cpp  implement_max_without_dnnl.cpp  init_tensorImpl.cpp  joining_grad.cpp  joining_ops.cpp  linear_ops.cpp  memory_ops.cpp  normalization_tests.cpp  out.txt  pooling.cpp  pytorch.ipynb  reduction_ops.cpp  softmax_ops.cpp  view_grad.cpp  view_ops.cpp
